# CoolPrompt

./: .dockerignore  .flake8  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.en.md  README.md  README.ru.md  docker-compose.demo.yml  manifest.yaml  pack.sh  pyproject.toml  railway.json  requirements.txt  time.txt
.github/workflows/: publish.yaml  publish.yml  test-publish.yaml  test-publish.yml  workflow.yml
ablation_prompts/: meta_prompts_32v_20260309_123329.txt  meta_prompts_32v_20260309_125730.json
coolprompt/: __init__.py  assistant.py  naive_test.py  test.py
coolprompt/data_generator/: __init__.py  generator.py  pydantic_formatters.py
coolprompt/evaluator/: __init__.py  base_evaluator  evaluator.py  ifeval_checkers.py  metrics.py  portfolio.py
coolprompt/language_model/: __init__.py  deepeval_model.py  llm.py  tracker.py
coolprompt/method_evaluation/: __init__.py  method_evaluation.py
coolprompt/optimizer/: HyPE.md  apmethod.py  autoprompting_method.py  hype.py  naive.py  registry.py
coolprompt/prompt_assistant/: prompt_assistant.py  test.py
coolprompt/task_detector/: detector.py  pydantic_formatters.py
coolprompt/test/: plot_results.py  prompts.py  test.py  test_hype.py  test_lang_detect.py  test_providers.py  test_translation.py
coolprompt/utils/: __init__.py  arithmetics.py  conversAPI.py  conversCore.py  conversModels.py  corrector.py  default.py  deprecation.py  enums.py  language_detection.py  load_dataset.py  logging_config.py  parsing.py  prompt_freezer.py  prompt_template.py  redConfig.py  red_models.py  telemetry.py  utils.py  validation.py  var_validation.py
data/: basic_prompts.json  labels.json  prompt_templates.json
demo_service/: README.md  __init__.py  app.py  e2e_real_matrix.py  methods.py  requirements.txt  runner.py  schemas.py  settings.py
demo_service/static/: app.js  index.html  styles.css
distillprompt_outputs/: final_results.yaml
distillprompt_outputs/Iteration1/: round_results.yaml
distillprompt_outputs/Iteration2/: round_results.yaml
docs/: API.md  CONTRIBUTING.md
docs/analysis/: CONSOLIDATED_FINDINGS.md  gpt4omini_8seed_results.txt  pe2_sgr_ifeval_regression.md  phase1_gate_ifeval_ablation.md  robustness_variance.md  (+3 more)
logs/: ape_v2_results.json  full_openrouter_gpt4omini.json  ladder_qwen14b.json  ladder_qwen32b.json  ladder_qwen8b.json  opro_v2_results.json  pe2_paper_ape_results.json  pe2_paper_opro_results.json  pe2_paper_pe2_sgr_results.json  pe2_paper_pe2_top_gains.json  pe2_sgr_v2_results.json  pe2_v2_results.json  sgr_advantage_ape_phase1_2_results.json  sgr_advantage_opro_phase1_2_results.json  sgr_advantage_pe2_phase1_2_results.json  sgr_advantage_pe2_sgr_phase1_2_results.json  sgr_advantage_reasoning.jsonl
notebooks/: dataset_exploration.ipynb  evaluation_example.ipynb  minio_usage_example.ipynb  t_lite_instruct_example.ipynb
scripts/: aggregate_gpt_seeds.py  dataset_downloading.sh  portfolio_niche_map.py  variance_analysis.py
test/: README.md
(+2604 files in other folders)
