[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["coolprompt"]  # package names should match these glob patterns (["*"] by default)
exclude = ["notebooks", "data"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false

[project]
name = "coolprompt"
version = "0.0.3"
authors = [
  { name="Nikita Kulin", email="serito1998@gmail.com" },
]
description = "A framework for automative prompting creation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/CTLab-ITMO/CoolPrompt"
Issues = "https://github.com/CTLab-ITMO/CoolPrompt/issues"